# SISR

./: .gitignore  Cargo.toml  README.md  mkdocs.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_base.yml  docs-deploy.yml  release.yml  snapshots.yml
cef_injectee/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.app.json  vite.config.ts
cef_injectee/src/: dev.svelte  index.d.ts
cef_injectee/src/dev/: http-interceptor.ts  mocks.ts
cef_injectee/src/entrypoints/: create_marker_shortcut.ts  overlay_callback.ts
cef_injectee/src/lib/: api.ts
docs/: index.md
docs/downloads/: index.md
docs/getting-started/: installation.md
docs/guides/: networked.md
docs/misc/: faq.md
docs/misq/: faq.md  troubleshooting.md
main/: 404.html  index.html
main/changelog/: index.html
main/changelog/main/: index.html
main/config/cli/: index.html
main/config/config/: index.html
main/dev/building/: index.html
main/downloads/: index.html
main/getting-started/installation/: index.html
main/getting-started/usbip/: index.html
main/guides/glossi_like/: index.html
main/guides/networked/: index.html
main/guides/overview/: index.html
main/javascript/: downloads.js
main/misc/faq/: index.html
main/misc/troubleshooting/: index.html
main/search/: search_index.json
main/stylesheets/: extra.css
scripts/: install.ps1  install.sh
src/: config.rs  logging.rs  main.rs
src/app/: core.rs  tray.rs  window.rs
src/app/gui/: dialogs.rs
src/app/input/: device.rs  mod.rs  sdl.rs  sdl_hints.rs
src/app/input/handler/: events.rs  events_connection.rs  events_input.rs  events_misc.rs  gui.rs  mod.rs  viiper.rs  viiper_bridge.rs
src/app/input/handler/gui/: bottom_bar.rs  controller_info.rs  (+2 more)
src/app/steam_utils/: binding_enforcer.rs  util.rs
src/app/steam_utils/cef_debug/: inject.rs  payloads.rs
src/app/steam_utils/cef_ws/: broadcast.rs  handler.rs  mod.rs  response_writer.rs  server.rs
src/gfx/: mod.rs
tests/: meh.rs
(+2 files in other folders)
