[package]
name = "SISR"
version = "0.0.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
figment = { version = "0.10", features = ["json", "toml", "yaml"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20" }
chrono = "0.4.42"

[lib]
name = "sisr"
